# SemesterX

./: README.md
AIS/projekt/etap1/: etap1.pptx  rzeczy.txt
AIS/projekt/etap2/: etap2.doc  etap2.odt  wip.archimate  wip2.archimate
AIS/projekt/etap2/proj PC/: AIS proj temat.doc  AIS_transportKolejowy.pptx  Ais-e2.docx
SDM2/Scrabble/article/: article.tex
SDM2/Scrabble/presentation/: presentation.tex
SDM2/manisero/: .gitignore  notes.txt  sdm2_Aniserowicz_Michal.pptx
SDM2/manisero/article/: main.tex  turasa.tex
SDM2/manisero/article/figures/: accelerometer_axes.tex  orientation_axes.tex  positionTracking.tex  spaceGraphics_orientation.tex
SPDB/project/: .gitignore  pom.xml
SPDB/project/data-access/: pom.xml
SPDB/project/data-populator/: pom.xml
SPDB/project/ios-client/: .gitignore  Podfile
SPDB/project/ios-client/SPDBClient.xcodeproj/: project.pbxproj
SPDB/project/web-services/: pom.xml
SPDB/report/: report.tex
SPDB/report/graphics/: architecture.eps  architecture.vsdx
SPOP/projekt/: .gitignore
SPOP/projekt/dev/: Main.hs  Tests.hs  board.hs  gameTree.hs  main.hs  spop.cabal
SPOP/projekt/dev/Logic/: AI.hs  Board.hs  Game.hs  GameTree.hs  Game_TicTacToe.hs  Game_WolfNSheep.hs  TicTacToe.hs  board.hs  gameTree.hs  ticTacToe.hs
SPOP/projekt/dev/Logic/AI/: AlphaBeta.hs  GameTree.hs  Heuristic.hs  Minimax.hs
SPOP/projekt/dev/Presentation/: Board.hs  GameLoop.hs  GameLoop_TicTacToe.hs  GameLoop_WolfNSheep.hs  GameSpecific.hs  Print.hs  SaveLoad.hs
SPOP/projekt/doc/: board.spop  pat.spop  tttBoard.spop
SPOP/projekt/doc/report/: report.tex
(+154 files in other folders)
